// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadList should render with ltr bengali items with correct dir 1`] = `
.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c6 {
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
}

.c8 {
  font-size: 1.625rem;
  line-height: 1.875rem;
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 0rem;
}

.c10 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 2rem;
}

.c13 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 2rem;
}

.c15 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 0rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: 3rem;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: 3rem;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    min-width: 2rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c12 {
    min-width: 3rem;
  }
}

@media (min-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c14 {
    min-width: 2rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c7 {
    padding-right: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c10 {
    padding-right: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c13 {
    padding-right: 0rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c15 {
    padding-right: 0rem;
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="ltr"
  >
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ১
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ২
          </span>
        </div>
        <div
          class="c10"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ৩
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ৪
          </span>
        </div>
        <div
          class="c10"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ৫
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ৬
          </span>
        </div>
        <div
          class="c13"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c14"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ৭
          </span>
        </div>
        <div
          class="c15"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ৮
          </span>
        </div>
        <div
          class="c13"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c14"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ৯
          </span>
        </div>
        <div
          class="c15"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ১০
          </span>
        </div>
        <div
          class="c13"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/bengali/articles/c6p3yp5zzmeo"
          >
            ভিসা ফুরিয়ে যাওয়ায় ক্রিকেটার সাইফের জরিমানা
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr burmese items with correct dir 1`] = `
.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c6 {
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
}

.c8 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 0rem;
}

.c10 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 2rem;
}

.c13 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 2rem;
}

.c15 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 0rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: 4.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c12 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 4.125rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 5.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.25rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 2.75rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c7 {
    padding-right: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c10 {
    padding-right: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c13 {
    padding-right: 0rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c15 {
    padding-right: 0rem;
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="ltr"
  >
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ၁
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ၂
          </span>
        </div>
        <div
          class="c10"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ၃
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ၄
          </span>
        </div>
        <div
          class="c10"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ၅
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ၆
          </span>
        </div>
        <div
          class="c13"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c14"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ၇
          </span>
        </div>
        <div
          class="c15"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ၈
          </span>
        </div>
        <div
          class="c13"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c14"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ၉
          </span>
        </div>
        <div
          class="c15"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
          >
            ၁၀
          </span>
        </div>
        <div
          class="c13"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/burmese/articles/c3w1kwwmm5yo"
          >
            အောက်စဖို့ဒ် ဆရာတော် ပါမောက္ခ ဒေါက်တာအရှင်ဓမ္မသာမိ
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr news items with correct dir 1`] = `
.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c6 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
}

.c8 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 0rem;
}

.c10 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 2rem;
}

.c13 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 2rem;
}

.c15 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 0rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: 4.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c12 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c7 {
    padding-right: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c10 {
    padding-right: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c13 {
    padding-right: 0rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c15 {
    padding-right: 0rem;
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="ltr"
  >
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
          >
            1
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
          >
            2
          </span>
        </div>
        <div
          class="c10"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="ltr"
        >
          <span
            class="c6"
          >
            3
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="ltr"
        >
          <span
            class="c6"
          >
            4
          </span>
        </div>
        <div
          class="c10"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c6"
          >
            5
          </span>
        </div>
        <div
          class="c7"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
          >
            6
          </span>
        </div>
        <div
          class="c13"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c14"
          dir="ltr"
        >
          <span
            class="c6"
          >
            7
          </span>
        </div>
        <div
          class="c15"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
          >
            8
          </span>
        </div>
        <div
          class="c13"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c14"
          dir="ltr"
        >
          <span
            class="c6"
          >
            9
          </span>
        </div>
        <div
          class="c15"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="ltr"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c6"
          >
            10
          </span>
        </div>
        <div
          class="c13"
          dir="ltr"
        >
          <a
            class="c8"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with rtl arabic items with correct dir 1`] = `
.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c2 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c6 {
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
}

.c8 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
  padding-left: 0rem;
}

.c10 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
  padding-left: 2rem;
}

.c13 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
  padding-left: 2rem;
}

.c15 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
  padding-left: 0rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:24.9375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (max-width:14.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c5 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c5 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c9 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c9 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c9 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: 4.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c12 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c7 {
    padding-left: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c10 {
    padding-left: 2rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c13 {
    padding-left: 0rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c15 {
    padding-left: 0rem;
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1 c2"
    dir="rtl"
  >
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="rtl"
        >
          <span
            class="c6"
          >
            ۱
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
          >
            در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="rtl"
        >
          <span
            class="c6"
          >
            ۲
          </span>
        </div>
        <div
          class="c10"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
          >
            در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c5"
          dir="rtl"
        >
          <span
            class="c6"
          >
            ۳
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
          >
            در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c9"
          dir="rtl"
        >
          <span
            class="c6"
          >
            ۴
          </span>
        </div>
        <div
          class="c10"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
          >
            در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c11"
          dir="rtl"
        >
          <span
            class="c6"
          >
            ۵
          </span>
        </div>
        <div
          class="c7"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
          >
            در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="rtl"
        >
          <span
            class="c6"
          >
            ۶
          </span>
        </div>
        <div
          class="c13"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
          >
            در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c14"
          dir="rtl"
        >
          <span
            class="c6"
          >
            ۷
          </span>
        </div>
        <div
          class="c15"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
          >
            در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="rtl"
        >
          <span
            class="c6"
          >
            ۸
          </span>
        </div>
        <div
          class="c13"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
          >
            در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c14"
          dir="rtl"
        >
          <span
            class="c6"
          >
            ۹
          </span>
        </div>
        <div
          class="c15"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
          >
            در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
          </a>
        </div>
      </li>
    </div>
    <div
      as="li"
      class="c3"
      dir="rtl"
    >
      <li
        class="c4"
      >
        <div
          class="c12"
          dir="rtl"
        >
          <span
            class="c6"
          >
            ۱۰
          </span>
        </div>
        <div
          class="c13"
          dir="rtl"
        >
          <a
            class="c8"
            href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
          >
            در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
          </a>
        </div>
      </li>
    </div>
  </div>
</ol>
`;
